# chatbot-benchmark

./: .gitignore  pyproject.toml
chatbot_evaluation/: beir_hf_ds.py  beir_pytorch_ds.py  download_ds.py  excel_to_db.py  main_test.py  query_set_prompt_save_result_ragas.py  retrieve_eval.py  summerize_hf_fa_benchmark.py
chatbot_evaluation/config/: seed.yaml  suite.yaml
chatbot_evaluation/evalkit/: files.py  gates.py  gen_autofill.py  lock.py  manifest.py  merge.py  metrics_registry.py  reporting.py  resolve.py  retrieval_bundle.py  retrieval_phase.py  run_eval.py  run_suite.py
chatbot_evaluation/metrics/: m_answer_relevancy.py  m_factual_correctness.py  m_faithfulness.py  metric_result.py
chatbot_evaluation/output_beir_summary/: abank_beir_samples.txt  cqad_upstack_mathematica_retrieval_fa_beir_samples.txt  dataset_statistics.csv  miracl_fa_beir_samples.txt  persian_web_document_retrieval_beir_samples.txt  scifact_fa_beir_samples.txt  touche2020_fa_beir_samples.txt
chatbot_evaluation/prompts/: llm_context_precision_with_reference.txt
chatbot_evaluation/ragas_test/: ragas_get_prompt.py
chatbot_evaluation/ret_ds_to_beir/: ds_PersianWebDocumentRetrieval.py  ds_hc4_fa.py  ds_scifact-fa.py
chatbot_evaluation/retreive/: cli.py  cliv2.py
chatbot_evaluation/temp/: check.py  faithfulness_from_files.py  file_metric_factual.py  judge.py  m_answer_relevancy.py  m_answer_relevancy3.py  m_factual_correctness.py  mfaith_run.py  mfaithfulness.py  minimal_test.py  run_answer_relevancy.py  run_factual_correctness.py  (+5 more)
scripts/: beir_hf_ds.py  beir_pytorch_ds.py
(+112 files in other folders)
