[project]
name = "chatbot_evaluation"
version = "0.1.0"
description = ""
authors = [
    {name = "habib-z",email = "habib.zafarian@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ragas (>=0.3.1,<0.4.0)",
    "pillow (>=11.3.0,<12.0.0)",
    "jsonschema (>=4.25.0,<5.0.0)",
    "sentence-transformers (>=5.1.0,<6.0.0)",
    "pytrec-eval (>=0.5,<0.6)",
    "qdrant-client (>=1.15.1,<2.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry]
name = "chatbot-evaluation"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
packages = []
